# asft

./: .gitignore  Dockerfile  LICENSE  README.md  asft_config.yaml  check_github.py  check_jobs.py  check_jobs_2.py  docker-compose.yml  my_task.json  mypy_out.txt  pyproject.toml  pytest.ini  rapid_results.json  support_bot.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 18536087d77b_add_benchmarkresult_model.py  4d6d7a6dca98_initial_migration.py  7d137dec7e12_add_actual_runtime_and_reward_score_to_.py  c1a5a2758ab8_add_routinghistory_model.py  d82db60389dc_add_strategyoutcome_model.py
asft/: __init__.py
asft/accuracy/: __init__.py  confidence_scorer.py  multi_pass_reasoner.py  self_critique.py  verification_layer.py  verifier.py
asft/analysis/: __init__.py  analyzer.py  evaluator.py  finetune_estimator.py  rag_analyzer.py  recommender.py  report.py
asft/api/: middleware.py  schemas.py  server.py  websockets.py
asft/benchmark/: reporter.py  runner.py
asft/cli/: analyze.py  main.py
asft/compute/: __init__.py  adaptive_compute.py
asft/continual/: __init__.py  ewc_trainer.py
asft/core/: __init__.py  config.py  events.py  exceptions.py  hardware_profiler.py  interfaces.py  registry.py  settings.py
asft/dataset/: __init__.py  clusterer.py  compressor.py  deduplicator.py  quality_scorer.py  representative_selector.py  streaming_compressor.py
asft/db/: database.py  maintenance.py  models.py
asft/distillation/: __init__.py  knowledge_distiller.py
asft/evaluation/: benchmark_manager.py  harness.py
asft/evolutionary/: evolutionary_engine.py
asft/hardware/: optimizer.py
asft/improvement/: __init__.py  self_improvement_engine.py
asft/layers/: layer_selection.py
asft/memory/: __init__.py  consolidator.py  episodic_memory.py  long_term_memory.py  memory_manager.py  semantic_memory.py  vector_memory.py  working_memory.py
asft/memory/backends/: faiss_adapter.py  qdrant.py  secure_qdrant.py
asft/observability/: logging.py  metrics.py
asft/optimizer/: __init__.py  auto_optimizer.py  cost_estimator.py  decision_engine.py
asft/plugins/: loader.py
asft/security/: auth.py  input_validator.py  rbac.py  sandbox.py
asft/selection/: __init__.py  parameter_selector.py  sample_selector.py
asft/skills/: __init__.py  skill_pack.py  skill_router.py
asft/skills/packs/: automation.py  coding.py  mathematics.py  planning.py  research.py  (+1 more)
asft/sparse/: __init__.py  activation_analyzer.py  dynamic_sparse.py  lora_adapter.py  neuron_selector.py  sparse_trainer.py
asft/training/: checkpoint_manager.py  job_store.py  peft_trainer.py
asft/workers/: __init__.py  celery_app.py  process_pool.py  tasks.py
examples/: 01_hardware_and_routing.py  02_memory_systems.py  03_accuracy_and_dataset.py
k8s/: deployment.yaml  hpa.yaml  keda_autoscaling.yaml
tests/: __init__.py  conftest.py  test_analysis.py  test_asft.py  test_security.py  test_training_optimizer.py  test_v3_1_enterprise.py
tests/qa_benchmarks/: rapid_validator.py
